# MilkDrop3

./: .gitignore  CMakeLists.txt  README.md  test_ctab.cpp  test_d3d.cpp  test_d3dcompiler.cpp
docs/: ARCHITECTURE.md
docs/plans/: D3DX9_REMOVAL_PLAN.md
resources/presets/: Evet + Geiss - Chrome - MilkDrop2077 003b.milk  Jaenam - MilkDrop2077 - Stormy Torus.milk  MilkDrop2077 - Ferrofluid Ball1.milk  MilkDrop2077 - Lasers from the Sky2.milk  MilkDrop2077 - NeonAngel vs Flexi - Venom Textures 2 Manda.milk  MilkDrop2077 - NeonAngel vs Flexi - Venom Textures 2 Manda2.milk  MilkDrop2077 - NeonAngel vs Flexi - Venom Textures 2 Manda4.milk2  MilkDrop2077 - Pink lines.milk  MilkDrop2077 - Rainbow Butterfly2.milk  MilkDrop2077 - Rainbow Dotted Flower.milk  MilkDrop2077 - Wave from the Rainbow1.milk  MilkDrop2077 - Wave from the Rainbow2.milk  MilkDrop2077.008 The rainbow spider.milk  MilkDrop2077.022 Simple Wave 6e Mandala2.milk2  MilkDrop2077.R124 2.milk2  MilkDrop3 - Equalizer3 Cube.milk  MilkDrop3 - Equalizer5 Round.milk  OldEclipse - MilkDrop2077 - Refactoring3.milk  XorDev - MilkDrop2077 - A Drop of Milk3.milk  XorDev - MilkDrop2077 - Rocaille2.milk  XorDev - MilkDrop2077 - martin - Corridor2 Fractal Walls .milk  XorDev - MilkDrop2077 - martin - Starship Red Lines.milk  YoheiNishitsuji - Martin - MilkDrop2077 - Fractal Pumpkin2.milk  diatribes - MilkDrop2077 - Cloud Look3 Storm [MOUSE].milk  diatribes - MilkDrop2077 - Cloud Look3 [MOUSE].milk  diatribes - MilkDrop2077 - Fractal Tunnel Flight3.milk  lara - MilkDrop2077 - Flexi Romanesco Uncompressed [MOUSE].milk  martin - the early universe - Milkdrop2077 rmx9.milk2  mrange - MilkDrop2077 - Reflective 4D Julia2.milk  yonatan - MilkDrop2077 - Dust2.milk  yonatan - MilkDrop2077 - Fractal Ship2.milk
resources/shapes/: shape_square.shape  shape_triangle.shape
resources/waves/: Mdgeorge2.wave  lasso2.wave  shooting_stars2.wave  starsRGB.wave  string2.wave  string3.wave
src/: CMakeLists.txt
src/ns-eel2/: nseel-compiler.c
src/resources/docs/: Beginners Guide.htm  LICENSE.txt
src/resources/presets/: Jaenam - MilkDrop2077 - Perlin Fluid LSD.milk  Mdgeorge - 3Body Glass - MilkDrop2077 Butterfly1.milk2  MilkDrop2077 - Dude the walls are moving1.milk  MilkDrop2077 - Dude the walls are moving2.milk  MilkDrop2077 - Fire Tunnel1.milk  MilkDrop2077 - Lasers from the Sky1.milk  MilkDrop2077 - Mandala.milk2  MilkDrop2077 - MilkDrop 3.27 Spirale3.milk2  MilkDrop2077 - NeonAngel vs Flexi - Venom Textures 2 Manda3.milk  MilkDrop2077 - NeonAngel vs Flexi - Venom Textures 2 Manda3.milk2  MilkDrop2077 vs Flexis Moebius spiral 2.milk  MilkDrop2077.042 Wall of peas10.milk2  MilkDrop2077.Classic.Wave.089a.milk  MilkDrop2077.Classic.Wave.089b.milk  MilkDrop2077.R078b.milk2  MilkDrop2077.R181 Inverted Cube2d.milk  MilkDrop3 - Equalizer1d.milk2  MilkDrop3 - Equalizer2c double.milk2  MilkDrop3 - Equalizer2d double.milk2  MilkDrop3 - Equalizer4d doubleV.milk2  MilkDrop3 - Equalizer5 Round Hz.milk  MilkDrop3 - Equalizer6 Water.milk  OldEclipse - MilkDrop2077 - Alien Crater Lakes2.milk  OldEclipse - MilkDrop2077 - Alien Crater Lakes3c.milk  OldEclipse - MilkDrop2077 - Cyber Conduits2g.milk  OldEclipse - MilkDrop2077 - Strangest Attractor3.milk  OldEclipse - diatribes - MilkDrop2077 - Tri Wave Light Trip3.milk  XorDev - Drip4b.milk  XorDev - MilkDrop2077 - Disc.milk  XorDev - MilkDrop2077 - Sunset Dark.milk  XorDev - MilkDrop2077 - WaveForm6.milk  Yohei Nishitsuji - MilkDrop2077 - MicroDust RGB.milk  Yohei Nishitsuji - MilkDrop2077 - MicroDust5b.milk  YoheiNishitsuji - Martin - MilkDrop2077 - Fractal Pumpkin3.milk2  diatribes - MilkDrop2077 - Plasma of Strings.milk  martin - Massif Central -x-x-x-y-y-z-z-.milk  martin - MilkDrop2077 - Claire Osbcure Lighs.milk  mrange - MilkDrop2077 - Reflective 4D Julia1.milk  yonatan - MilkDrop2077 - Fractal Ship1.milk
src/resources/shapes/: d.shape  dots.shape  esc.shape  flies2.shape  shape_cercle.shape
src/resources/waves/: flies.wave  neon.wave  serge1.wave  shooting_stars.wave  splashes.wave
src/vis_milk2/: Milkdrop2PcmVisualizer.cpp  defines.h  dxcontext.h  md_font.cpp  md_font.h  md_image.cpp  md_image.h  md_math.h  md_shader.cpp  md_shader.h  milkdropfs.cpp  plugin.cpp  plugin.h  pluginshell.cpp  pluginshell.h  state.cpp  state.h  support.cpp  support.h  texmgr.cpp  textmgr.cpp  textmgr.h  utility.h
